--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -85,7 +85,7 @@
                                             </h5>
                                             <p class="starability-result card-text" data-rating="<%= review.rating %>">
                                             </p>
-                                            <p class="card-text mb-1">
+                                            <p class="card-text">
                                                 <%= review.comment %>
                                             </p>
 <% if(currUser && currUser._id.equals(review.author._id)){ %>
