--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -1,68 +1,113 @@
 <% layout("/layouts/boilerplate")%>
 
-    <body>
-        <h3>Edit your listing</h3>
-        <div class="row">
-            <div class="col-8 offset-2">
-                <br>
-                <form method="post" action="/listing/<%=listing._id%>?_method=PUT" novalidate class="needs-validation"
-                    enctype="multipart/form-data">
+    <div class="row mt-3">
+        <div class="col-8 offset-3 ">
+            <h3>
+                <%= listing.title %>
+            </h3>
+        </div>
+        <div class="card col-6 offset-3 show-card listing-card">
+            <img src="<%= listing.image.url  %>" class="card-img-top show-img" alt="listing_image">
 
-                    <div class="mb-3">
-                        <label for="title" class="form-label">Title</label>
-                        <input type="text" name="listing[title]" value="<%= listing.title %>" class="form-control"
-                            required>
-                        <div class="valid-feedback">Title looks fine</div>
-                        <br><br>
-                    </div>
+            <div class="card-body">
+                <p class="card-text"><b>Owned by: </b><i>
+                        <%= listing.owner.username %>
+                    </i></p>
+                <p class="card-text">
+                    <%= listing.description %>
+                </p>
+                <p class="card-text">&#8377;<%= listing.price.toLocaleString("en-IN") %>
+                </p>
+                <p class="card-text">
+                    <%= listing.location %>
+                </p>
+                <p class="card-text">
+                    <%= listing.country %>
+                </p>
+            </div>
 
-                    <div class="mb-3">
-                        <label for="description" class="form-label">Description</label>
-                        <textarea type="text" name="listing[description]" class="form-control"
-                            required><%= listing.description %></textarea>
-                        <div class="invalid-feedback">Please provide a short description</div><br><br>
-                    </div>
+        </div>
+        <br>
 
-                    <div class="mb-3">
-                        Original Listing image: <br>
-                        <img src="<%=originalImageUrl %>" height="300" width="350" alt="image">
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="image" class="form-label">Upload new Image</label>
-                        <input type="file" name="listing[image]" class="form-control">
-                        <!-- <div class="valid-feedback"></div> -->
-                        <br><br>
-                    </div>
-
-                    <div class="row">
-                        <div class="mb-3 col-4">
-                            <label for="price" class="form-label">Price</label>
-                            <input type="number" name="listing[price]" value="<%=listing.price%>" class="form-control"
-                                required>
-                            <div class="invalid-feedback">Enter valid price</div>
-                            <br><br>
-                        </div>
-
-                        <div class="mb-3 col-8">
-                            <label for="country" class="form-label">Country</label>
-                            <input type="text" name="listing[country]" value="<%= listing.country %>"
-                                class="form-control" required>
-                            <div class="invalid-feedback">Enter valid country name</div><br><br>
-                        </div>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="location" class="form-label">Location</label>
-                        <input type="text" name="listing[location]" value="<%= listing.location %>" class="form-control"
-                            required>
-                        <div class="invalid-feedback">Enter valid location</div>
-                        <br><br>
-                    </div>
-
-                    <button class="btn btn-dark edit-btn">Edit</button>
-                    <br><br>
+        <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
+            <div class="btns">
+                <a href="/listing/<%= listing._id%>/edit" class="btn btn-dark col-1 offset-3 edit-btn">
+                    Edit
+                </a>
+                <form method="post" action="/listing/<%=listing._id%>?_method=DELETE">
+                    <button class="btn btn-dark offset-5">Delete</button>
                 </form>
             </div>
-        </div>
-    </body>
+            <%}%>
+
+                <div class="col-8 offset-3 mb-3">
+                    <% if(currUser){ %>
+                        <hr>
+                        <h4>Leave a Review</h4>
+                        <form action="/listing/<%= listing.id%>/reviews" method="post" novalidate
+                            class="needs-validation">
+
+                            <div class="mb-3 mt-3">
+                                <label for="rating" class="form-label">Rating</label>
+                                <fieldset class="starability-slot">
+                                    <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]"
+                                        value="1" checked aria-label="No rating." />
+                                    <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                                    <label for="first-rate1" title="Terrible">1 star</label>
+                                    <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                                    <label for="first-rate2" title="Not good">2 stars</label>
+                                    <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                                    <label for="first-rate3" title="Average">3 stars</label>
+                                    <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                                    <label for="first-rate4" title="Very good">4 stars</label>
+                                    <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                                    <label for="first-rate5" title="Amazing">5 stars</label>
+                                </fieldset>
+                            </div>
+
+                            <div class="mb-3 mt-3">
+                                <label for="comment" class="form-label">Comments</label>
+                                <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control"
+                                    required></textarea>
+                                <div class="invalid-feedback">Please add some comments for review</div>
+                            </div>
+                            <button class="btn btn-outline-dark">Submit</button>
+                        </form>
+                        <%}%>
+                            <hr>
+                            <% if(listing.reviews.length>0) {%>
+                            <p><b>All Reviews</b></p>
+                            <div class="row">
+                                <%for(review of listing.reviews){%>
+                                    <div class="card col-5 ms-3 mb-3">
+                                        <div class="card-body">
+                                            <h5 class="card-title">@<%= review.author.username %>
+                                            </h5>
+                                            <p class="starability-result card-text" data-rating="<%= review.rating %>">
+                                            </p>
+                                            <p class="card-text">
+                                                <%= review.comment %>
+                                            </p>
+                                            <form
+                                                action="/listing/<%=listing._id%>/reviews/<%=review._id%>?_method=Delete"
+                                                method="post" class="mb-3">
+                                                <button class="btn btn-sm btn-dark">Delete</button>
+                                            </form>
+                                            <%}%> 
+                                        </div>
+                                    </div>
+                                    <%}%>
+                            </div>
+                </div>
+                <div id="map-data" style="display: none;">
+                    <%= JSON.stringify({ lat: listing.geoCoordinates.coordinates[1], lng: listing.geoCoordinates.coordinates[0] }) %>
+                </div>
+                <div id="map-title" style="display: none;"><%= listing.title %></div>
+                
+                <div id="map" style="width: 65vw; height: 400px; margin:auto;"></div>
+                
+                <script src="/js/map.js"></script>
+                <script async defer
+                    src="https://maps.googleapis.com/maps/api/js?key=<%=process.env.GOOGLE_MAPS_API_KEY%>&callback=initMap">
+                </script>
+    </div>
