--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -1,4 +1,6 @@
+show.ejs:
 <% layout("/layouts/boilerplate")%>
+
 
     <div class="row mt-3">
         <div class="col-8 offset-3 ">
@@ -75,7 +77,6 @@
                         </form>
                         <%}%>
                             <hr>
-                            <% if(listing.reviews.length>0) {%>
                             <p><b>All Reviews</b></p>
                             <div class="row">
                                 <%for(review of listing.reviews){%>
@@ -93,21 +94,14 @@
                                                 method="post" class="mb-3">
                                                 <button class="btn btn-sm btn-dark">Delete</button>
                                             </form>
-                                            <%}%> 
                                         </div>
                                     </div>
                                     <%}%>
                             </div>
                 </div>
-                <div id="map-data" style="display: none;">
-                    <%= JSON.stringify({ lat: listing.geoCoordinates.coordinates[1], lng: listing.geoCoordinates.coordinates[0] }) %>
-                </div>
-                <div id="map-title" style="display: none;"><%= listing.title %></div>
-                
-                <div id="map" style="width: 65vw; height: 400px; margin:auto;"></div>
-                
-                <script src="/js/map.js"></script>
-                <script async defer
-                    src="https://maps.googleapis.com/maps/api/js?key=<%=process.env.GOOGLE_MAPS_API_KEY%>&callback=initMap">
-                </script>
+                <gmp-map class="mt-3 mb-5" center="20.592487335205078,78.96243286132812" zoom="14" map-id="DEMO_MAP_ID"
+                    style="width: 65vw; height: 400px; margin:auto;">
+                    <gmp-advanced-marker position="20.592487335205078,78.96243286132812"
+                        title="My location"></gmp-advanced-marker>
+                </gmp-map>
     </div>
