--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -86,14 +86,14 @@ show.ejs:
                                             </h5>
                                             <p class="starability-result card-text" data-rating="<%= review.rating %>">
                                             </p>
-                                            <p class="card-text">
+                                            <p class="card-text mb-1">
                                                 <%= review.comment %>
                                             </p>
-                                            <form
-                                                action="/listing/<%=listing._id%>/reviews/<%=review._id%>?_method=Delete"
-                                                method="post" class="mb-3">
-                                                <button class="btn btn-sm btn-dark">Delete</button>
-                                            </form>
+                                            <% if(currUser && review.author._id.equals(currUser._id)) { %>  
+                                                <form method="POST" action="/listing/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE">
+                                                  <button class="btn btn-dark  mb-3">Delete</button>
+                                                </form>
+                                                <%}%>
                                         </div>
                                     </div>
                                     <%}%>
