--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -1,6 +1,4 @@
-show.ejs:
 <% layout("/layouts/boilerplate")%>
-
 
     <div class="row mt-3">
         <div class="col-8 offset-3 ">
@@ -86,14 +84,14 @@ show.ejs:
                                             </h5>
                                             <p class="starability-result card-text" data-rating="<%= review.rating %>">
                                             </p>
-                                            <p class="card-text mb-1">
+                                            <p class="card-text">
                                                 <%= review.comment %>
                                             </p>
-                                            <% if(currUser && review.author._id.equals(currUser._id)) { %>  
-                                                <form method="POST" action="/listing/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE">
-                                                  <button class="btn btn-dark  mb-3">Delete</button>
-                                                </form>
-                                                <%}%>
+                                            <form
+                                                action="/listing/<%=listing._id%>/reviews/<%=review._id%>?_method=Delete"
+                                                method="post" class="mb-3">
+                                                <button class="btn btn-sm btn-dark">Delete</button>
+                                            </form>
                                         </div>
                                     </div>
                                     <%}%>
