--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -119,8 +119,7 @@
 
             <div class="navbar-nav ms-auto">
                 <form action="/listing/search" method="GET" class="d-flex" role="search">
-                    <input class="form-control me-2 search-inp" type="search" name="query"
-                        placeholder="Search destinations">
+                    <input class="form-control me-2 search-inp" type="search" name="query" placeholder="Search destinations">
                     <button class="btn search-btn" type="submit"><i
                             class="fa-solid fa-magnifying-glass"></i>Search</button>
                 </form>
