--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -14,6 +14,7 @@
     .search-btn i {
         display: inline;
         margin-right: 0.5rem;
+    font-size: 16px;  /* Ensure uniform icon size */
     }
 
     .search-inp {
