--- a/views/listing/new.ejs
+++ b/views/listing/new.ejs
@@ -11,8 +11,10 @@
                     <div class="mb-3">
                         <label for="title" class="form-label">Title</label>
                         <input type="text" name="listing[title]" placeholder="enter title" class="form-control"
-                            required><br><br>
+                            required>
+                            <div class="invalid-feedback">Please provide a title</div>
                         <div class="valid-feedback">Title looks fine</div>
+                        <br><br>
                     </div>
 
                     <div class="mb-3">
