--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -7,8 +7,8 @@
             
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
-                <input type="text" name="username" placeholder="enter username" id="username" class="form-control" required><br>
-                <div class="valid-feedback">Username looks fine</div>
+                <input type="text" name="username" placeholder="enter username" id="username" class="form-control" required>
+                <div class="valid-feedback">Username looks fine</div><br>
             </div>
 
             <div class="mb-3">
